# pass-the-bomb

./: manage.py  pyproject.toml
pass_the_bomb/: asgi.py  settings.py  urls.py  wsgi.py
